2021-04-28  HIRAOKA Kazuyuki  <khi@users.osdn.me>

	* howm-view.el (howm-view-summary-mode): add TAB and M-TAB to docstring

2021-02-17  HIRAOKA Kazuyuki  <khi@users.osdn.me>

	* configure.ac: version 1.4.8-snapshot2

	* cheat-font-lock.el (cheat-font-lock-mode, cheat-font-lock-fontify):
	fix incomplete font-lock after save

2020-12-31  HIRAOKA Kazuyuki  <khi@users.osdn.me>

	* configure.ac: version 1.4.8-snapshot1

2020-12-31  HIRAOKA Kazuyuki  <khi@users.osdn.me>

	* configure.ac: version 1.4.7

	* howm.el.in: update copyright years

2020-12-29  HIRAOKA Kazuyuki  <khi@users.osdn.me>

	* howm-mode.el (howm-template-title):
	delete obsolete comment

	* cheat-font-lock.el (cheat-font-lock-fontify):
	fix warning on font-lock-fontify-buffer in byte compiling

2020-10-15  HIRAOKA Kazuyuki  <khi@users.osdn.me>

	* configure.ac: set version as 1.4.7-snapshot2

2020-09-14  HIRAOKA Kazuyuki  <khi@users.osdn.me>

	* howm-common.el (howm-call-process-last-command):
	fix 'invalid-read-syntax "#"' in docstring

2018-09-29  HIRAOKA Kazuyuki  <khi@users.osdn.me>

	* configure.ac: set version as 1.4.7-snapshot1

2019-12-31  HIRAOKA Kazuyuki  <khi@users.osdn.me>

	* configure.ac: version 1.4.6

2019-08-18  HIRAOKA Kazuyuki  <khi@users.osdn.me>

	* configure.ac: set version as 1.4.6-snapshot3

	* howm-common.el (howm-decode-time): fix for new decode-time
	thx > U5948U5e7eU4e43
	https://twitter.com/U5948U5e7eU4e43/status/1162732269347336193
	http://git.savannah.gnu.org/cgit/emacs.git/commit/etc/NEWS?id=b06917a4912a60402025286d07d4a195749245c4

2018-12-31  HIRAOKA Kazuyuki  <khi@users.osdn.me>

	* configure.ac: version 1.4.5

2018-09-29  HIRAOKA Kazuyuki  <khi@users.osdn.me>

	* configure.ac: set version as 1.4.5-snapshot3

2018-09-29  HIRAOKA Kazuyuki  <khi@users.osdn.me>

	* update autotools

2018-09-27  HIRAOKA Kazuyuki  <khi@users.osdn.me>

	* howm-mode.el
	(howm-migemo-get-pattern, howm-migemo-client, howm-migemo-client-option):